Wrap words inside <pre> tags. Fixes #462

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -76,6 +76,10 @@ small
 .ok
   display: none
 
+pre
+  white-space: pre-wrap
+  word-break: normal
+
 #page-title small
   color: #ddd
 
